Added tpm signing, communication flow and completely organised the folders/files